remove unnecessary commented out sections